Fix FormField without label alignment

--- a/packages/core/src/form-field/FormField.css
+++ b/packages/core/src/form-field/FormField.css
@@ -68,3 +68,9 @@
   --saltCheckbox-outline: none;
   --saltRadioButton-outline: none;
 }
+
+@supports selector(:has(*)) {
+  .saltFormField:not(:has(.saltFormFieldLabel)) {
+    grid-template-areas: "controls";
+  }
+}
